.k8s/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-auth
  namespace: iot-telemetry
spec:
  selector:
    app: iot-auth
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
